<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app1="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">
    <item android:id="@+id/toolbar_export_data"
        android:title="@string/toolbar_export_data"
        android:orderInCategory="1"
        app1:showAsAction="always"/>
    <item android:id="@+id/toolbar_nfc_bind"
        android:title="@string/toolbar_nfc_bind"
        android:orderInCategory="2"
        app1:showAsAction="always"/>
    <item android:id="@+id/toolbar_user_login"
        android:title="@string/toolbar_user_login"
        android:orderInCategory="3"
        app1:showAsAction="never"/>
    <item android:id="@+id/toolbar_upload_sickbed_data"
        android:title="@string/toolbar_upload_sickbed_data"
        android:orderInCategory="4"
        app1:showAsAction="never"/>
    <item android:id="@+id/toolbar_setting"
        android:title="@string/toolbar_setting"
        android:orderInCategory="5"
        app1:showAsAction="never"/>


</menu>